# HEP-GPT

./: .devcontainer.json  .flake8  .gitignore  Dockerfile  README.md  eval.py  main.py  model.py  pyproject.toml  requirements.txt  submit.sh  train.py
.devcontainer/: devcontainer.json
config/: config.yaml
configs/: eval.yaml  main.yaml  train.yaml  train_nano_gpt.yaml
configs/callbacks/: early_stopping.yaml  model_checkpoint.yaml  model_summary.yaml  rich_progress_bar.yaml  stochastic_weight_avg.yaml
configs/data/: default.yaml  trackml.yaml
configs/datamodule/: odd_small.yaml  trackml.yaml
configs/experiment/: odd.yaml  test.yaml  test_odd.yaml  test_trackml.yaml
configs/fabric/: cpu.yaml  ddp.yaml  deepspeed.yaml  default.yaml  fsdp.yaml  gpu.yaml  multinodes.yaml
configs/hydra/: default.yaml
configs/logger/: csv.yaml  tensorboard.yaml  wandb.yaml
configs/loggers/: csv.yaml
configs/model/: next_module_prediction.yaml
configs/nanogpt/: gpt2.yaml  trackml.yaml
configs/trainer/: default.yaml  gpu.yaml
data/trackml/: reader.py
nano_gpt/: train.py
notebooks/: CheckACTSdata.ipynb  CheckInputData.ipynb  Evaluation.ipynb  ModelExplore.ipynb  ScalingLaw.ipynb
scripts/: README.md  convert_acts_to_hdf5.py  create_data.py  run_create_data.sh
src/: main.py
src/datamodules/: __init__.py  reserved_tokens.py  sequence_data.py  trackml.py
src/datamodules/components/: event_reader_base.py  odd.py  odd_reader.py
src/models/: next_module_prediction.py
src/models/components/: gpt.py
src/utils/: pylogger.py  utils.py
